<resources>
    //upeka
    <string name="app_name">Expense Tracker for university student</string>

    <string-array name="items">
        <item>Select item</item>
        <item>Transport</item>
        <item>Food</item>
        <item>Boarding place</item>
        <item>Entertainment</item>
        <item>Education</item>
        <item>Charity</item>
        <item>Health</item>
        <item>Others</item>


    </string-array>

    //pasindu
    <string-array name="departments">
        <item>IT</item>
        <item>BM</item>
        <item>EN</item>
    </string-array>
    <string name="add_a_question">Add a question</string>
    <string name="question">Question</string>
    <string name="answers">Answers</string>
    <string name="All">All</string>
    <string name="My_Question">My Questions</string>
    <string name="home">Home</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_question">Edit question</string>
    <string name="submit_answers">Submit answers</string>
    <string name="your_answer">Your answer</string>
    <string name="todo">TODO</string>
    <string name="expenses">EXPENSES</string>
    <string name="QnA">Q&amp;A</string>
    <string name="quiz">Quiz</string>
    <string name="add">Add</string>
    <string name="department">Department</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="itxxxxxxxx">ITXXXXXXXX</string>
    <string name="it">IT</string>
    <string name="type_your_answer">Type your answer...</string>

    //Rishan

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_todo">todo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    //harindu
    <string name="select_language">Select Language</string>
    <string name="_1_10">1/10</string>
    <string name="who_are_you">Who are you ?</string>
    <string name="optionA">Robot</string>
    <string name="optionB">Bot</string>
    <string name="optionC">Human</string>
    <string name="optionD">!Human</string>
    <string name="your_score">Your Score. .</string>
    <string name="all_level">All Level</string>
    <string name="please_wait">Please wait....</string>
    <string name="category">Category</string>

    <!--Admob-->

    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad">ca-app-pub-3940256099942544/1033173712</string>

</resources>