<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    app:cardBackgroundColor="@color/yellow"
    app:strokeColor="@color/yellow"
    android:outlineAmbientShadowColor="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/itxxxxxxxx"
            android:textStyle="bold"
            android:id="@+id/question_item_studentID"
            android:layout_toStartOf="@id/question_item_dep"
            android:layout_alignParentStart="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/question_item_dep"
            android:textColor="@color/black"
            android:text="@string/it"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/question_item_question"
            android:textColor="@color/black"
            android:layout_below="@id/question_item_studentID"
            android:text="@string/question"
            android:maxLines="1"
            android:ellipsize="end"/>



    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>