<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.QuizActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:layout_marginTop="-2dp"
            android:id="@+id/progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressTint="#F00"
            android:scaleY="2" />

        <TextView
            android:id="@+id/count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/_1_10"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/count"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:minHeight="150dp"
            app:cardBackgroundColor="#101f3d"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/who_are_you"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/optionsButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            android:padding="10dp"

            >


            <TextView
                android:id="@+id/optionA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/checkboxedit"
                android:backgroundTint="#e9b21c"
                android:drawableRight="@drawable/ic_baseline_panorama_fish_eye_24"
                android:padding="15dp"
                android:text="@string/optionA"
                android:textColor="@color/hint"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/optionB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#e9b21c"
                android:background="@drawable/checkboxedit"
                android:drawableRight="@drawable/ic_baseline_panorama_fish_eye_24"
                android:padding="15dp"
                android:text="@string/optionB"
                android:textColor="@color/hint"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/optionC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#e9b21c"
                android:background="@drawable/checkboxedit"
                android:drawableRight="@drawable/ic_baseline_panorama_fish_eye_24"
                android:padding="15dp"
                android:text="@string/optionC"
                android:textColor="@color/hint"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/optionD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/checkboxedit"
                android:backgroundTint="#e9b21c"
                android:drawableRight="@drawable/ic_baseline_panorama_fish_eye_24"
                android:padding="15dp"
                android:text="@string/optionD"
                android:textColor="@color/hint"
                android:textSize="18dp" />

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>