<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QandA"
    android:background="@color/dark_blue">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/materialButtonToggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:checkedButton="@+id/allBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true">

        <Button
            android:id="@+id/allBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/All"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/myQBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/My_Question"
            android:textColor="@color/white" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/swipelayout"
        app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroup">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Questions_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addQFltBtn"
        android:layout_width="56dp"
        android:layout_height="55dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="@color/yellow"
        android:elevation="4dp"
        android:src="@drawable/ic_plus"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/black"
        android:contentDescription="@string/ask_a_question" />


</androidx.constraintlayout.widget.ConstraintLayout>