<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Answers"
    android:background="@color/dark_blue"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="360dp"/>

    <TextView
        android:id="@+id/Question_submitAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/question"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@+id/DeleteQuestionBtn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:outlineAmbientShadowColor="@color/black"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:cardBackgroundColor="@color/yellow"
        app:layout_constraintTop_toBottomOf="@id/Question_submitAnswers"
        tools:layout_editor_absoluteX="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/answers_question_item_studentID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/answers_question_item_dep"
                android:text="ITXXXXXXXX"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/answers_question_item_dep" />

            <TextView
                android:id="@+id/answers_question_item_dep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="IT"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/answers_question_item_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/answers_question_item_studentID"
                android:text="my question is ?"
                android:textColor="@color/black" />


        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/answers_submitAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/answers"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        android:layout_marginLeft="8dp" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/answers_swipe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answers_submitAnswers">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/answers_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:layout_editor_absoluteX="0dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/DeleteQuestionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/delete"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/EditQuestionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/edit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/DeleteQuestionBtn"
        app:layout_constraintEnd_toStartOf="@+id/DeleteQuestionBtn"
        android:layout_marginRight="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>