<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddQuestion"
    android:background="@color/dark_blue"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/addQuestionbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/yellow"
        android:onClick="addQuestion"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addQuestionbtnSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/Question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/question"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/Department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/department"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddQuestion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp" />

    <EditText
        android:id="@+id/editTextAddQuestion"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20sp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:padding="8sp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question" />

    <Spinner
        android:id="@+id/addQuestionbtnSpinner"
        android:layout_width="200dp"
        android:layout_height="40sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/Department"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/drop_down_shape"
        android:layout_marginLeft="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
