<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditQuestion"
    android:background="@color/dark_blue"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/editQuestion_edtBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/edit"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editQuestion_dep"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/Question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="56dp"
        android:text="@string/question"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/Department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="56dp"
        android:text="@string/department"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editQuestion_question"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <EditText
        android:id="@+id/editQuestion_question"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20sp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:padding="8sp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:cursorVisible="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question" />

    <Spinner
        android:id="@+id/editQuestion_dep"
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Department" />

</androidx.constraintlayout.widget.ConstraintLayout>